# betabottle

./: .gitignore  README.md  enhanced_ib.py  max_cpu.py  poc_beta_star_exact_4.14144.py  pyproject.toml  validate_beta_star.py  workflow.yml
code_v2_multi_path/: multi_path_ib.py  requirements.txt
code_v3_Refined_Symbolic/: Coming Soon ✨
code_v3_Stable_Continuation/: requirements.txt  stable_continuation_ib.py
cpu-overload/: ib_optimizer.py  perfected_ib.py
development/: v2.py  v3.py  v4.py  v5.py
docs/: old_citations.bib
