[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betabottle"
version = "0.0.1"
description = "Reserved name for upcoming Alpay Algebra-based Information Bottleneck library."
authors = [{ name="Faruk Alpay", email="alpay@lightcap.ai" }]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
